# pros-data-visualization

./: flake.nix  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts
src/: App.svelte
src-tauri/: .tauriignore  Cargo.toml  tauri.conf.json
src-tauri/src/: brain.rs  logging.rs  loggingv2.rs  main.rs
src-tauri/src/tests/: chart_buffer.rs  mod.rs
src/lib/: Bar.svelte  BtControl.svelte  Graph.svelte
src/lib/BtControl/: BtControl.svelte  ConnectButton.svelte  Drawer.svelte  SearchButton.svelte
